name:                sean
version:             0.0.1.0
synopsis:            Language for semantic annotation.
license:             AllRightsReserved
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           (c) 2013 Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     SeAn
  build-depends:       base >= 4.5, containers >= 0.5, monad-supply >= 0.4,
                       mtl >= 2, uu-parsinglib >= 2.8
  hs-source-dirs:      src
