name:                sean
version:             0.1.0.0
synopsis:            Compiler for simple semantic annotation language
license:             AllRightsReserved
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           (c) 2013 Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable sean
  main-is:        Main.hs
  build-depends:  base >= 4.5, containers >= 0.5, monad-supply >= 0.4,
                  mtl >= 2.1, uu-parsinglib >= 2.8, MissingH >= 1.2
  hs-source-dirs: src

