name:                sean
version:             0.1.0.0
synopsis:            Compiler for simple semantic annotation language
license:             AllRightsReserved
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           (c) 2013 Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.8
data-files:          examples/example.sean

--executable sean
--  main-is:         Main.hs
--  build-depends:   base, containers, uu-parsinglib, monad-supply, mtl, transformers
--  hs-source-dirs:  src

library
  exposed-modules: Base, Parsing, Typing, Resolving, Reducing
  ghc-options:     -fwarn-incomplete-patterns
  build-depends:   base, containers, uu-parsinglib, monad-supply, mtl, transformers
  hs-source-dirs:  src

test-suite Reducing
  type:            exitcode-stdio-1.0
  main-is:         ReducingTests.hs
  build-depends:   base, containers, uu-parsinglib, monad-supply, mtl, transformers
  other-modules:   Paths_sean
  hs-source-dirs:  src test

test-suite Parsing
  type:            exitcode-stdio-1.0
  main-is:         ParsingTests.hs
  build-depends:   base, containers, uu-parsinglib, monad-supply, mtl, transformers
  other-modules:   Paths_sean
  hs-source-dirs:  src test
